@@ -2,6 +2,7 @@ package Algorithms;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class StringReverser {
     public static void main(String[] args) {
@@ -14,7 +15,7 @@ public class StringReverser {
 
     public static String getReversedString(String str) {
         if (!str.isEmpty() || !str.isBlank()) {
-            List<String> words = Arrays.stream(str.split(" ")).toList();
+            List<String> words = Arrays.stream(str.split(" ")).collect(Collectors.toList());
             StringBuilder sb = new StringBuilder();
             for (int i = words.size() - 1; i >= 0; i--) {
                 sb.append(words.get(i)).append(" ");
